src/activeqt/container/qaxwidget.cpp
@@ -778,8 +778,8 @@ void QAxClientSite::releaseAll()
         m_spOleControl->Release();
     m_spOleControl = nullptr;
     if (m_spOleObject) {
-        m_spOleObject->SetClientSite(0);
         m_spOleObject->Unadvise(m_dwOleObject);
+        m_spOleObject->SetClientSite(nullptr);
         m_spOleObject->Release();
     }
     m_spOleObject = 0;
